# fullstack-parallel-demo

./: .gitignore  README.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4494ff2b716f_add_customers_table.py  65e50f8ff5ec_add_suppliers_table.py  682d5a8750f8_add_categories_table.py  882da7d5d1db_create_products_table.py  8832e13f0675_merge_heads.py
backend/app/: categories_api.py  categories_repo.py  customers_api.py  customers_repo.py  db.py  main.py  models.py  products_api.py  products_repo.py  suppliers_api.py  suppliers_repo.py
backend/tests/: test_categories_api.py  test_categories_model.py  test_categories_repo.py  test_customers_api.py  test_customers_model.py  test_customers_repo.py  test_products_api.py  test_products_model.py  test_products_repo.py  test_suppliers_api.py  test_suppliers_model.py  test_suppliers_repo.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  categories.ts  customers.ts  products.ts  routes.tsx  suppliers.ts
frontend/src/components/: Categories.test.tsx  Categories.tsx  Customers.test.tsx  Customers.tsx  Home.test.tsx  Home.tsx  Products.test.tsx  Products.tsx  Suppliers.test.tsx  Suppliers.tsx
specs/cards/: CARD02-customers.md  CARD03-products.md  CARD04-suppliers.md  CARD05-categories.md
